Fixed z-index of login popup. Fixed bug in featured cars rendering too many cards causing animation glitches. Mathias helped with this and the prevvious 3 commits.

--- a/src/components/Home/FeaturedCars/FeaturedCars.css
+++ b/src/components/Home/FeaturedCars/FeaturedCars.css
@@ -44,6 +44,7 @@
   padding: 15px;
   width: 100%;
   height: 40vw;
+  margin-top: 5rem;
   align-self: center;
 }
 
@@ -88,22 +89,10 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  transition: transform 0.5s , box-shadow 0.3s ease-in-out;
+  transition: transform 0.5s, box-shadow 0.3s ease-in-out;
   max-height: 474px;
   max-width: 500px;
   padding: 40px 32px;
-}
-
-.featured-cars.next .featured-car {
-  animation: slideLeft 0.5s;
-}
-.featured-cars.prev .featured-car {
-  animation: slideRight 0.5s;
-}
-
-.featured-cars-controls {
-  display: flex;
-  flex-direction: row;
 }
 
 .hidden-card-left {
@@ -150,23 +139,43 @@
   height: 100%;
 }
 
+.featured-cars-controls {
+  display: flex;
+  flex-direction: row;
+}
+
 @media screen and (max-width: 1000px) {
 
   .featured-cars-slideshow {
     padding: 20px;
-    height: 700px;
+    height: 550px;
   }
 
   .featured-cars {
     width: 100%;
+    height: 50vh;
     max-height: none;
+    min-height: 300px;
   }
 
   .featured-car {
     width: 100%;
     max-width: none;
     max-height: none;
+    min-height: 350px;
+    min-width: 350px;
     padding: 20px;
   }
-  
+
+  .car-left-card {
+  transform: translate(-50%, -50%);
+}
+
+.car-right-card {
+  transform: translate(300%, -50%);
+}
+
+.hidden-card-left {
+  transform: translate(-350%, -50%);
+}
 }
