--- a/src/components/LoginRegister/LoginRegister.css
+++ b/src/components/LoginRegister/LoginRegister.css
@@ -10,6 +10,7 @@
   width: 100%;
   height: 100%;
   overflow: auto;
+  z-index: 2;
   background-color: var(--neutral-color-hover);
 }
 
