--- a/src/components/Rental/Rental.css
+++ b/src/components/Rental/Rental.css
@@ -34,10 +34,13 @@
 .rental-page .no-cars-message {
   position: relative;
   display: flex;
+  max-width: 300px;
+  max-height: 400px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin: 1rem auto 1rem auto;
+  text-align: center;
 }
 
 .rental-page .no-cars-message::before {
@@ -47,9 +50,9 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: var(--main-color);
-  opacity: 1;
+  background-color: var(--neutral-color-background);
   z-index: 0; /* Behind the logo but above the container background */
+  box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
   border-radius: 12px;
 }
 
@@ -63,6 +66,8 @@
 .rental-page .no-cars-message-text {
   color: white;
   z-index: 1000000;
+  font-size: var(--font-size-xl);
+  margin-top: calc(-1*var(--spacing-xl));
 }
 
 .rental-page .search-cars-field {
